@@ -279,6 +279,7 @@ Ben Darnell
 Kushal Das
 Jonathan Dasteel
 Pierre-Yves David
+A. Jesse Jiryu Davis
 John DeGood
 Ned Deily
 Vincent Delft
